fix(core): real thread detection, bounded violation tracking, working manifest parsing
Region guard / event bus:

- isRegionOrGlobalThread() accepted any thread whose name contained "Server", which matched
  Netty IO threads, the console handler and the watchdog — exactly the callers the guard
  exists to catch. It now uses instanceof against Folia's RegionizedWorldThread / TickThread
  (resolved reflectively) and only falls back to the exact name "Server thread" when the
  Folia classes are absent. Same substring test removed from RegionAwareEventBus.
- STRICT mode threw only on the first occurrence of each message and silently allowed every
  repeat; it now always rejects.
- The de-duplication sets (keys embed thread names, event classes and chunk coordinates)
  grew without bound; both are capped.
- dispatchRegion() was missing the !isOnRegionThread() condition that dispatchGlobal and
  dispatchEntity have, so every region event was recorded as a violation and STRICT dropped
  all of them.

Mod compatibility manifest:

- EturliaModLoadingPlugin ignored eturlia-supported.json completely: the "parser" returned
  four hard-coded ids and a single excluded entry with all fields null, so the documented
  hard block on c2me could never match. Replaced with a small dependency-free JSON reader
  (Gson is not guaranteed to be reachable during FML bootstrap).
- The resource was only looked up at /eturlia-supported.json while the build packages it
  under META-INF/; both paths are tried now, and a malformed manifest degrades to permissive
  mode instead of escaping as a RuntimeException.

Config:

- applyToPaperGlobal caught only ReflectiveOperationException; Paper field type/visibility
  drift raises IllegalArgumentException, which escaped and aborted configuration loading.
- _version was read but never compared, so an outdated on-disk config was never flagged
  (new keys are not merged into an existing file).
- The YAML subset parser silently mis-parsed tab indentation and